--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="ru">
         <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}
-            {{ name }}
+
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
