--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,12 +6,48 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+                  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+                  crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 
         {% endblock %}
-        {% block javascripts %}{% endblock %}
+    </head>
+    <body>
+        <header class="main-header">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <a href="{{ path('app_homepage') }}">Dals</a>
+                    </div>
+                    <div class="col-6">
+                        <form action="">
+                            <input type="text">
+                            <button class="submit">Поиск</button>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <ul>
+                            <li><a href="{{ path('app_homepage') }}">Home</a></li>
+                            <li><a href="">Profile</a></li>
+                            <li><a href="">Favourite</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+            {% block body %}
+
+            {% endblock %}
+
+
+
+        {% block javascripts %}
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        {% endblock %}
     </body>
 </html>
